feat: add location identifier to user commands and responses, enhance error handling